welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: illegal start of statement
match 
^BDRBuggle:5: error: '}' expected but 'case' found.
case "R" with droite();
^BDRBuggle:6: error: '}' expected but 'case' found.
case "L" with gauche();
^BDRBuggle:7: error: illegal start of definition
case "I" with droite(); droite(); avance();
^BDRBuggle:8: error: illegal start of definition
case "A" with avance();
^BDRBuggle:9: error: illegal start of definition
case "B" with avance(); avance();
^BDRBuggle:10: error: illegal start of definition
case "C" with avance(); avance(); avance();
^BDRBuggle:11: error: illegal start of definition
case "Y" with recule(); recule();
^BDRBuggle:12: error: illegal start of definition
case "X" with recule(); recule(); recule();
^BDRBuggle:15: error: eof expected but '}' found.
	}
        ^